Bug 56473 - IDE: Crash when inserting a simple macro
Summary: IDE: Crash when inserting a simple macro
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:3.7.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-27 23:29 UTC by Julien Nabet
Modified: 2012-11-09 21:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bt + console logs on master (4.88 KB, text/plain)
2012-10-27 23:29 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2012-10-27 23:29:31 UTC
Created attachment 69168 [details]
bt + console logs on master

Problem description: 
On pc Debian x86-64 with master sources updated today. I tried to reproduce fdo#39449 and when I put the lines in IDE, it crashed.

Steps to reproduce:
1. Open Calc
2. Menu Tools/Macro/Organize Macros/LibreOffice Basic
3. Click Edit button
4. Replace the main sub by:
Sub HelloWorld
  msgbox "Hello World!"
End Sub

Current behavior:
Crash

Expected behavior:
No crash

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Linux x86_64; rv:10.0.9) Gecko/20100101 Firefox/10.0.9 Iceweasel/10.0.9
Comment 1 Not Assigned 2012-10-28 08:50:24 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf7240d0676b4350892e01fa8c1ba5eb6a3913c6

Resolves: fdo#56473 IDE: Crash when inserting a simple macro



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Michael Meeks 2012-11-01 14:56:44 UTC
Thanks so much for fixing this Julien ! :-) I guess you're going to push an updated patch before closing this ?

Thanks !
Comment 3 Not Assigned 2012-11-02 22:10:21 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=465ab1c1263b76e3284f18219678e46a211c5605

Related: fdo#56473 IDE: Crash when inserting a simple macro



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2012-11-03 11:51:49 UTC
Michael: I added "i" variable in the loops but about removing iterators completely, I don't know how to do.
I'm stuck between cast, std::vector and std::auto_ptr. Too complicate for me.
So put it RESOLVED/FIXED since I don't reproduce the crash.
Comment 5 Not Assigned 2012-11-09 21:23:01 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a73c98a708ee41b8c4cf4f2063c5bc4b30044284

Better fix for fdo#56473, Crash when inserting a simple macro



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.