Resolves: fdo#56473 IDE: Crash when inserting a simple macro

Change-Id: I4390f63ddc491c3bb561cd9a2aea53735bcafb64